@@ -1,46 +1,34 @@
-# custom PyCharm VM opti
--ea
 -server
--Xms4g
--Xmx12g
+-ea
 -Xss1g
--XX:+DoEscapeAnalysis
--XX:+UseCompressedOops
--XX:+UnlockExperimentalVMOptions
--XX:+UseConcMarkSweepGC
+-Xmx4096m
+-Xmx12g
+-Xms4g
+-Xms4096m
+-Xlog:class+unload=off
+-XX:SoftRefLRUPolicyMSPerMB=50
+-XX:ReservedCodeCacheSize=240m
+-XX:ParallelGCThreads=4
+-XX:NewSize=1024m
+-XX:MaxNewSize=1512m
 -XX:LargePageSizeInBytes=256m
--XX:ReservedCodeCacheSize=96m
--XX:+UseCodeCacheFlushing
--XX:+UseCompressedOops
--XX:ParallelGCThreads=8
--XX:+UseParNewGC
+-XX:CMSInitiatingOccupancyFraction=60
+-XX:-OmitStackTraceInFastThrow
 -XX:+UseConcMarkSweepGC
--XX:+DisableExplicitGC
--XX:+ExplicitGCInvokesConcurrent
+-XX:+UseCompressedOops
+-XX:+UseCodeCacheFlushing
+-XX:+UseAdaptiveGCBoundary
+-XX:+UnlockExperimentalVMOptions
 -XX:+PrintGCDetails
 -XX:+PrintFlagsFinal
--XX:+AggressiveOpts
 -XX:+HeapDumpOnOutOfMemoryError
--XX:+CMSClassUnloadingEnabled
--XX:CMSInitiatingOccupancyFraction=60
--XX:+CMSClassUnloadingEnabled
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+DoEscapeAnalysis
+-XX:+DisableExplicitGC
 -XX:+CMSParallelRemarkEnabled
--XX:+UseAdaptiveGCBoundary
--XX:ReservedCodeCacheSize=240m
--XX:+UseConcMarkSweepGC
--XX:SoftRefLRUPolicyMSPerMB=50
--Dsun.io.useCanonCaches=false
--Djava.net.preferIPv4Stack=true
--XX:+HeapDumpOnOutOfMemoryError
--XX:-OmitStackTraceInFastThrow
--Dawt.useSystemAAFontSettings=lcd
--Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine-XX:ReservedCodeCacheSize=240m
--XX:+UseConcMarkSweepGC
--XX:SoftRefLRUPolicyMSPerMB=50
--Dsun.io.useCanonCaches=false
--Djava.net.preferIPv4Stack=true
--XX:+HeapDumpOnOutOfMemoryError
--XX:-OmitStackTraceInFastThrow
--Dawt.useSystemAAFontSettings=lcd
+-XX:+CMSClassUnloadingEnabled
 -Dsun.java2d.renderer=sun.java2d.marlin.MarlinRenderingEngine
+-Dsun.io.useCanonCaches=false
+-Djava.net.preferIPv4Stack=true
+-Dawt.useSystemAAFontSettings=on
 
